--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -14,8 +14,6 @@ body{
     justify-content: center;
     align-items: center;
 }
-
-
 body::-webkit-scrollbar {
     width: 5px;
   }
@@ -26,13 +24,22 @@ body::-webkit-scrollbar-thumb {
     background-color: rgb(69,248,130);  
     border-radius: 20px;  
 }
+html{
+  scrollbar-color: rgb(69,248,130) black;
+  scroll-behavior: smooth;
+  scrollbar-width: 20px;
+  scrollbar-shadow-color: black;
+  scrollbar-track-color: black;
+}
 .cursor{
     height: 10px;
     width: 10px;
-    position: fixed;
+    position: absolute;
     z-index: 1;
-    top: 50%;
-    left: 50%;
+    transform: translate3d(0,0,0);
+    transition: 100ms transform;
+    top: -0.5%;
+    left: -0.5%;
     pointer-events: none;
     transform: translate(-50%, -50%);
     display: none;
@@ -47,4 +54,28 @@ body::-webkit-scrollbar-thumb {
 ::selection {
   color: black;
   background: rgb(69,248,130);
+}
+.upper{
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  opacity: 0;
+  visibility: hidden;
+  background-color: rgb(69,248,130);
+  border-radius: 8px;
+  cursor: pointer;
+  position: fixed;
+  bottom: 20px;
+  rotate: -90deg;
+  padding: 5px;
+  z-index: 500;
+  transition: 500ms all;
+  right: 40px;
+  &:hover{
+    background: orange;
+  }
+}
+.upper-show{
+  opacity: 1;
+  visibility: visible;
 }
