--- a/assets/styles/reset.css
+++ b/assets/styles/reset.css
@@ -8,7 +8,7 @@
 a{
     text-decoration: none;
 }
-html,body{
+body{
     height: 100%;
     width: 100%;
     overflow-x: hidden;
